--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,14 +1,14 @@
 ---
 
 - name: verify nginx
-  command: "{{ openresty_server_pkg }} -c {{ openresty_base_dir }}/nginx.conf -t"
+  command: "{{ openresty_service }} -c {{ openresty_base_dir }}/nginx.conf -t"
 
 - name: reload nginx
   service:
-    name: "{{ openresty_server_pkg }}"
+    name: "{{ openresty_service }}"
     state: reloaded
 
 - name: restart nginx
   service:
-    name: "{{ openresty_server_pkg }}"
+    name: "{{ openresty_service }}"
     state: restarted
