--- a/vars/openresty.yml
+++ b/vars/openresty.yml
@@ -4,9 +4,10 @@ _openresty_repo_url: "deb http://openresty.org/package/ubuntu {{ ansible_distrib
 _openresty_repo_key: https://openresty.org/package/pubkey.gpg
 _openresty_package_version: 1.17.8.2-1~bionic1
 _openresty_server_pkg: "openresty={{ _openresty_package_version }}"
-_openresty_server_service: "openresty"
+_openresty_server_service: openresty
 
 _openresty_root_dir: /usr/local/openresty/nginx/html
+_openresty_pid_dir: /usr/local/openresty/nginx/logs
 
 _openrest_default_listen_options:
   - default_server
@@ -23,12 +24,12 @@ _openresty_systemd_service:
 
       Service:
         Type: forking
-        PIDFile: "{{ openresty_pid_dir }}/nginx.pid"
+        PIDFile: "{{ openresty_pid_file }}"
         RuntimeDirectory: "{{ openresty_pid_dir | basename }}"
         ExecStartPre: /usr/local/openresty/nginx/sbin/nginx -c {{ openresty_base_dir }}/nginx.conf -t -q -g 'daemon on; master_process on;'
         ExecStart: /usr/local/openresty/nginx/sbin/nginx -c {{ openresty_base_dir }}/nginx.conf -g 'daemon on; master_process on;'
         ExecReload: /usr/local/openresty/nginx/sbin/nginx -c {{ openresty_base_dir }}/nginx.conf -g 'daemon on; master_process on;' -s reload
-        ExecStop: /sbin/start-stop-daemon --quiet --stop --retry QUIT/5 --pidfile {{ openresty_pid_dir }}/nginx.pid
+        ExecStop: /sbin/start-stop-daemon --quiet --stop --retry QUIT/5 --pidfile {{ openresty_pid_file }}
         TimeoutStopSec: 5
         KillMode: mixed
         LimitNOFILE: 60000
