--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,9 +15,12 @@ openresty_packages:
 
 openresty_conf_dir: "{{ openresty_base_dir }}/conf.d"
 
-openresty_pid_dir: /var/run/nginx
+openresty_pid_dir: "{{ _openresty_pid_dir }}"
+openresty_pid_file: "{{ openresty_pid_dir }}/nginx.pid"
+
 openresty_log_dir: /var/log/nginx
 openresty_root_dir: "{{ _openresty_root_dir }}"
+
 
 openresty_systemd_service_path: "{{ _openresty_systemd_service_path }}"
 openresty_systemd_service: "{{ _openresty_systemd_service }}"
@@ -46,7 +49,7 @@ openresty_main_template:
     worker_processes: auto
     #worker_rlimit_nofile: 1024
     error_log: "{{ openresty_log_dir }}/error.log debug"
-    pid: "{{ openresty_pid_dir }}/nginx.pid"
+    pid: "{{ openresty_pid_file }}"
   event_conf:
     worker_connections: 1024
     multi_accept: 'on'
