--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -70,7 +70,7 @@ openresty_main_template:
     index: index.php index.htm index.html
 
     gzip: 'on'
-    gzip_disable: "MSIE [1-6].(?!.*SV1)"
+#    gzip_disable: "MSIE [1-6].(?!.*SV1)"
     gzip_vary: 'on'
     gzip_proxied: any
     gzip_comp_level: 6
