--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ openresty_packages:
   - gnupg
   - ca-certificates
   - software-properties-common
+  - logrotate
 
 openresty_conf_dir: "{{ openresty_base_dir }}/conf.d"
 
@@ -21,6 +22,8 @@ openresty_pid_file: "{{ openresty_pid_dir }}/nginx.pid"
 openresty_log_dir: /var/log/nginx
 openresty_root_dir: "{{ _openresty_root_dir }}"
 
+openresty_logrotate_enabled: true
+openresty_logrotate_dir: /etc/logrotate.d
 
 openresty_systemd_service_path: "{{ _openresty_systemd_service_path }}"
 openresty_systemd_service: "{{ _openresty_systemd_service }}"
@@ -70,9 +73,9 @@ openresty_main_template:
     index: index.php index.htm index.html
 
     gzip: 'on'
-#    gzip_disable: "MSIE [1-6].(?!.*SV1)"
+    #gzip_disable: "MSIE [1-6].(?!.*SV1)"
     gzip_vary: 'on'
-    gzip_proxied: any
+    gzip_proxied: anyx
     gzip_comp_level: 6
     gzip_buffers: 16 8k
     gzip_http_version: 1.1
