--- a/tasks/ssl.yml
+++ b/tasks/ssl.yml
@@ -5,16 +5,19 @@
     path: "{{ openresty_ssl_key_dir }}/{{ openresty_ssl_selfsigned_name }}.pem"
     size: 4096
     type: RSA
+    mode: 400
 
 - name: Generate an OpenSSL Certificate Signing Request
   openssl_csr:
     path: "{{ openresty_ssl_csr_dir }}/{{ openresty_ssl_selfsigned_name }}.csr"
     privatekey_path: "{{ openresty_ssl_key_dir }}/{{ openresty_ssl_selfsigned_name }}.pem"
     common_name: "{{ ansible_hostname }}"
+    mode: 600
 
 - name: Generate a Self Signed OpenSSL certificate
   openssl_certificate:
     path: "{{ openresty_ssl_cert_dir }}/{{ openresty_ssl_selfsigned_name }}.crt"
     privatekey_path: "{{ openresty_ssl_key_dir }}/{{ openresty_ssl_selfsigned_name }}.pem"
     csr_path: "{{ openresty_ssl_csr_dir }}/{{ openresty_ssl_selfsigned_name }}.csr"
+    mode: 600
     provider: selfsigned
