allow promethues for lua

--- a/vars/openresty.yml
+++ b/vars/openresty.yml
@@ -52,6 +52,7 @@ _openresty_lua_params:
       allow 10.0.0.251/32;
       allow 10.0.0.252/32;
       allow 10.0.0.25/32;
+      allow 10.0.0.101/32;
       allow 127.0.0.1;
       deny all;
 
